--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
-  }
-  "engines": { // <-- Add this section
+  },
+  "engines": { 
     "node": ">=18.0.0" 
   }
 }
