--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "seed:admin" : "node seedAdmin.js"
+    "seed:admin": "node seedAdmin.js",
+    "seed:classes": "node seedClasses.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.17.0",
     "mongoose": "^8.16.1"
   },
   "devDependencies": {
@@ -25,4 +27,5 @@
   "engines": { 
     "node": ">=18.0.0" 
   }
+
 }
